--- a/views/reports/new.ejs
+++ b/views/reports/new.ejs
@@ -65,7 +65,7 @@
                   <p>
                         <select id="category" name="category">
                         <option value="">Select Category</option>
-                        <option value = "graphical">GraphicaL</option>
+                        <option value = "graphical">Graphical</option>
                         <option value = "functional">Functional</option>
                         <option value = "permormance">Performance</option>
                      </select>
@@ -131,7 +131,7 @@
             
          </form>
                
-            <div class="">
+            <div class="new--report--btn">
                <input type="submit" value="Post" class="btn" form="create--report" id="new--report--btn">
             </div>
       </div> 
